--- a/ui/index.html
+++ b/ui/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wojak Finance V2</title>
-    <link rel="stylesheet" href="/ui/styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <main class="app-shell">
       <div class="brand-strip">
         <div class="floating-brand">
-          <img src="/ui/Wojak_logoTransparent.png" alt="Wojak Finance" class="brand-logo" />
+          <img src="./Wojak_logoTransparent.png" alt="Wojak Finance" class="brand-logo" />
         </div>
         <a class="floating-unrektus" href="https://app.unrektus.fi" target="_blank" rel="noopener noreferrer">
-          <img src="/ui/unrektuslogo.svg" alt="Unrektus" class="unrektus-logo" />
+          <img src="./unrektuslogo.svg" alt="Unrektus" class="unrektus-logo" />
           <span>Use your uREKT now!</span>
         </a>
       </div>
-      <img src="/ui/wojak_agent.png" alt="" class="floating-agent" aria-hidden="true" />
+      <img src="./wojak_agent.png" alt="" class="floating-agent" aria-hidden="true" />
 
       <button id="mobileNavToggle" class="mobile-nav-toggle" type="button">☰</button>
       <div id="mobileNavMenu" class="mobile-nav-menu">
@@ -189,6 +189,6 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
-    <script src="/ui/app.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
